# BYM412_Proje

./: .dockerignore  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md
home_cleaner_bot_description/: CMakeLists.txt
home_cleaner_bot_description/launch/: gazebo.launch.py
home_cleaner_bot_description/urdf/: home_cleaner.urdf.xacro
src/home_cleaner_bot_description/: CMakeLists.txt  package.xml
src/home_cleaner_bot_description/config/: mapper_params_online_async.yaml  nav2_params.yaml
src/home_cleaner_bot_description/launch/: gazebo.launch.py  navigation.launch.py  slam.launch.py
src/home_cleaner_bot_description/worlds/: LAYOUT_DIAGRAM.txt  my_home.sdf
