<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>home_cleaner_bot_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Siriusthego@users.noreply.github.com">abdullahemirkirecci</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
